tests/NormalTests/paczka1/small_fuzzy/21338814.err
Error in line 1: S963 A875 5,2
Error in line 4: ncRYGxJ A338 67,0
Error in line 8: LvLY3fW5RuH A875 75,3
